--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "arpy-enhance",
-  "version": "1.0.0",
-  "description": "",
-  "main": "ArpyEnhance.user.js",
+  "version": "0.18.0",
+  "description": "ArpyEnhance userscript - enhances Arpy work hour reporting",
+  "type": "module",
   "scripts": {
+    "dev": "vite build --watch",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/emoryy/arpy-enhance.git"
   },
-  "author": "",
+  "author": "Emoryy",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/emoryy/arpy-enhance/issues"
@@ -18,6 +21,8 @@
   "homepage": "https://github.com/emoryy/arpy-enhance#readme",
   "devDependencies": {
     "eslint": "^8.11.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-plugin-import": "^2.25.4",
+    "vite": "^5.4.11",
+    "vite-plugin-monkey": "^4.0.6"
   }
 }
